# ros

./: waiterbot.urdf~  waiterbot_packages.txt  waiterbot_packages.txt~
beginner_tutorials/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
beginner_tutorials/src/: listener.cpp  talker.cpp
waiterbot_description/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
waiterbot_description/launch/: waiterbot_description.launch
waiterbot_description/src/: collada_urdf.cpp  collada_urdf.cpp~
waiterbot_description/urdf/: plain.urdf  plain.urdf~  waiterbot.gv  waiterbot.urdf  waiterbot.xacro  waiterbot.xacro~  waiterbot_manual.urdf
waiterbot_hardware_packages/: waiterbot_hardware_packages.txt
waiterbot_hardware_packages/waiterbot_failsafe/: CMakeLists.txt  package.xml
waiterbot_hardware_packages/waiterbot_hardware_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
waiterbot_hardware_packages/waiterbot_hardware_msgs/msg/: Encoder.msg  Encoder.msg~  Velocity.msg
waiterbot_hardware_packages/waiterbot_skidsteer/: CMakeLists.txt  package.xml  package.xml~
waiterbot_hardware_packages/waiterbot_skidsteer/src/: odometry_calculator.cpp~
waiterbot_launch/: CMakeLists.txt  package.xml
waiterbot_launch/launch/: waiterbot.launch  waiterbot.launch~
waiterbot_motion_packages/waiterbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
waiterbot_motion_packages/waiterbot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  waiterbot.srdf
waiterbot_motion_packages/waiterbot_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context.launch~  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
waiterbot_motion_packages/waiterbot_state_publisher/: CMakeLists.txt  package.xml
waiterbot_motion_packages/waiterbot_state_publisher/launch/: waiterbot_state_publisher.launch  waiterbot_static_publisher.launch  waiterbot_static_publisher.launch~
